@@ -497,6 +497,7 @@ Example : export area weapons /home/users/myarea\n\r\
 Example : export area screen\n\r\
 Example : export area email\n\r\
 Example : export world data /exportfiles/\n\r\
+Example : export player bob\n\r\
 Short(s): \n\r\
 The export command will generate the official coffeemud area files, \
 whose extension is "*.cmare".  This command may also be used to export \
